Final version #TODO: add SonarQube doc